# fast

./: Cargo.toml  Makefile  README.md
src/: display.rs  main.rs  nat.rs  test.rs  tui.rs  types.rs
