[package]
name = "fast"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
ratatui = "0.29"
crossterm = "0.28"
rupnp = "2"                # UPnP discovery and control
